--- a/style.css
+++ b/style.css
@@ -7,10 +7,28 @@ main {
 }
 
 #img {
-    width:300px;
+    width:200px;
+    height: 200px;
+    object-fit: cover;
 }
+
+#pin {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    transform: translatex(-50%);
+    top: -15px;
+    left: 50%;
+
+}
+
 
 .bCard {
     background-color: white;
     padding: 5%;
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+    text-align: center;
+    position: relative;
+    width: 250px;
+    margin: 0 auto;
 }
