--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 }
 
 .fontData {
-    
+    font-family: "Sometype Mono", serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
 }
 
 header {
