--- a/style.css
+++ b/style.css
@@ -50,3 +50,21 @@ main {
     transform: scale(1.2);
     transform: rotate(40deg);
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left:0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.overlay img {
+    width: 50%;
+}
